# oTree_gpt

./: main.py  pyproject.toml  requirements.txt  settings.py
bif_distractor/: BIF.html  Redirect.html  __init__.py
budgeting/: __init__.py
budgeting_multiplayer/: __init__.py
budgeting_multiround/: __init__.py
budgeting_roles/: __init__.py
budgeting_scenarioadvice/: __init__.py
budgeting_singleplayer/: __init__.py
crossflexed/: Context.html  Controls.html  Demographics.html  Introduction.html  Thanks.html  __init__.py  actual_condition.html  expected_condition.html
exp/: Background.html  Checks.html  Condition1.html  Controls.html  Decision.html  Explainer.html  Introduction.html  Knowledge.html  Sorry.html  Thanks.html  __init__.py  chat.html
prisoner/: __init__.py  models.py
spec_design/: Assessment.html  BIF.html  Background.html  CLT_Condition.html  Checks.html  Condition1.html  Condition2.html  Consent.html  Controls.html  Demographics.html  Introduction.html  Manip_Check.html  Mediators.html  PANAS.html  Redirect.html  ScreenedOut.html  Spec_Condition.html  Thanks.html  Welcome.html  __init__.py
spec_design-EOL/: Assessment.html  Background.html  Controls.html  Demographics.html  Introduction.html  Screening.html  Thanks.html  __init__.py
spec_design-Lee/: Assessment.html  Background.html  Controls.html  PANAS.html  __init__.py
spec_design2/: Assessment.html  Background.html  CLT_Condition.html  Characteristics.html  Consent.html  Controls.html  Demographics.html  Introduction.html  Manip_Check.html  Mediators.html  ScenarioCheck.html  (+3 more)
(+92 files in other folders)
